--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,3 +1,10 @@
-h1 {
-    color: red;
+.shop-container {
+    display: flex;
+}
+
+.product-container {
+    width: 70%;
+    margin-left: 20px;
+    margin-right: 5px;
+    border-right: 1px solid lightgray;
 }
